bio started. spacing fixed.

--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,21 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-bottom: .5rem;
 }
 
 h1, h2, h3, h4, h5, h6, p {
     color: rgb(233, 233, 233);
     font-family: Arial, Helvetica, sans-serif;
-    margin: 1rem;
+    margin: .2rem;
     font-weight: lighter;
 }
 
 .section {
     margin-top: 1rem;
-    width: 94vw;
+    width: 100%;
     background-color: #232323;
     display: flex;
     flex-direction: column;
@@ -26,6 +29,21 @@ h1, h2, h3, h4, h5, h6, p {
     border-radius: .3rem;
     box-shadow: rgba(255, 255, 255, 0.25) 0px 25px 50px -12px;
     padding: 1rem;
+}
+
+#about-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+#bio {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* justify-content: space-evenly; */
+    align-items: center;
+    width: 40%;
 }
 
 #portrait {
@@ -61,7 +79,7 @@ h1, h2, h3, h4, h5, h6, p {
     align-items: center;
     flex-direction: column;
     margin: .5rem;
-    width: 6.1rem;
+    width: 5rem;
 }
 
 .icon-background {
@@ -99,6 +117,11 @@ h1, h2, h3, h4, h5, h6, p {
     align-items: center;
     gap: 1rem;
     width: 40%;
+    background-color: #323232;
+    padding: 1rem;
+    padding-bottom: 2rem;
+    border-radius: .3rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .project-links {
